<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.qrowd-project</groupId>
    <artifactId>wp6.transportation-mode-learning</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.version>2.11.12</scala.version>
        <dllearner.version>1.3.1-SNAPSHOT</dllearner.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>

            <!-- Spark MLLib -->
            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-mllib_2.11</artifactId>
                <version>2.3.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-sql_2.11</artifactId>
                <version>2.3.0</version>
            </dependency>

            <!-- DL-Learner -->
            <dependency>
                <groupId>org.dllearner</groupId>
                <artifactId>components-core</artifactId>
                <version>${dllearner.version}</version>
            </dependency>

            <!-- Scopt -->
            <dependency>
                <groupId>com.github.scopt</groupId>
                <artifactId>scopt_${scala.binary.version}</artifactId>
                <version>3.7.0</version>
            </dependency>

            <!-- Config API -->
            <dependency>
                <groupId>com.typesafe</groupId>
                <artifactId>config</artifactId>
                <version>1.3.2</version>
            </dependency>

            <!-- Barefoot Map Matching API -->
            <dependency>
                <groupId>com.bmw-carit</groupId>
                <artifactId>barefoot</artifactId>
                <version>0.1.4</version>
            </dependency>

            <!-- Shapeless -->
            <dependency>
                <groupId>com.chuusai</groupId>
                <artifactId>shapeless_2.11</artifactId>
                <version>2.3.3</version>
            </dependency>



        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <!--<outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>-->
        <!--<testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>-->
        <plugins>
            <!-- Scala Maven -->
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <scalaVersion>${scala.version}</scalaVersion>
                            <recompileMode>incremental</recompileMode>
                            <useZincServer>true</useZincServer>
                            <args>
                                <arg>-unchecked</arg>
                                <arg>-deprecation</arg>
                                <arg>-feature</arg>
                                <arg>-dependencyfile</arg>
                                <arg>${project.build.directory}/.scala_dependencies</arg>
                                <arg>-Xmax-classfile-name</arg>
                                <arg>128</arg>
                            </args>
                            <jvmArgs>
                                <jvmArg>-Xms1024m</jvmArg>
                                <jvmArg>-Xmx1024m</jvmArg>
                                <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
                                <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                                <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
                            </jvmArgs>
                            <!--<javacArgs>-->
                            <!--<javacArg>-source</javacArg>-->
                            <!--<javacArg>${java.version}</javacArg>-->
                            <!--<javacArg>-target</javacArg>-->
                            <!--<javacArg>${java.version}</javacArg>-->
                            <!--<javacArg>-Xlint:all,-serial,-path</javacArg>-->
                            <!--</javacArgs>-->

                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <recompileMode>incremental</recompileMode>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>maven.aksw.internal</id>
            <name>University Leipzig, AKSW Maven2 Repository</name>
            <url>http://maven.aksw.org/repository/internal</url>
            <releases />
        </repository>
        <repository>
            <id>maven.aksw.snapshots</id>
            <name>University Leipzig, AKSW Maven2 Repository</name>
            <url>http://maven.aksw.org/repository/snapshots</url>
            <snapshots />
        </repository>
        <repository>
            <id>davidsoergel.releases</id>
            <name>David Soergel's Maven Repository</name>
            <url>http://dev.davidsoergel.com/nexus/content/repositories/releases</url>
        </repository>
    </repositories>
</project>